# tiktok-tts

./: CHANGELOG.md  README.md
src/: app.py  auto-py-to-exe.json  pyproject.toml
src/root_app/controllers/: base.py  hello.py
src/root_app/globals/: const.py  style.py
src/root_app/models/hello/: thread.py
src/root_app/utils/: tts_tiktok.py
src/root_app/views/: base.py
src/root_app/views/hello/: ui.py
